--- a/department-service.properties
+++ b/department-service.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.boot.message=Hello,DepartmentService
+spring.boot.message=Hello,DepartmentService Sprinmg cloud bus demo
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
