--- a/department-service.properties
+++ b/department-service.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=nitishAMRUTHA!@123
 server.port=8091
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
